# culler

./: .gitignore  CHANGELOG.md  COMMIT_MESSAGE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  package-check.yml  release.yml
benchmarks/release/: README.md  run.py  suite.json  test_run.py
benchmarks/release/fixtures/advanced_bindings/: pyproject.toml
benchmarks/release/fixtures/advanced_bindings/src/pkg/: __init__.py  app.py  bindings.py
benchmarks/release/fixtures/annotations_tests/: pyproject.toml
benchmarks/release/fixtures/annotations_tests/src/pkg/: service.py  types.py
benchmarks/release/fixtures/annotations_tests/tests/: test_service.py
benchmarks/release/fixtures/auto_mode/: pyproject.toml
benchmarks/release/fixtures/auto_mode/src/pkg/: __init__.py  cli.py
benchmarks/release/fixtures/constructed_cli/: pyproject.toml
benchmarks/release/fixtures/constructed_cli/src/pkg/: cli.py  commands.py
benchmarks/release/fixtures/constructed_library/: pyproject.toml
benchmarks/release/fixtures/constructed_library/src/pkg/: __init__.py  private.py  public.py
benchmarks/release/fixtures/constructed_scale/: pyproject.toml
benchmarks/release/fixtures/constructed_scale/src/pkg/: scale.py
benchmarks/release/fixtures/dynamic_exports/: pyproject.toml
benchmarks/release/fixtures/dynamic_exports/src/pkg/: __init__.py  api.py
benchmarks/release/fixtures/library_api/src/pkg/: __init__.py  api.py
benchmarks/release/fixtures/partial_project/: pyproject.toml
benchmarks/release/fixtures/partial_project/src/pkg/: good.py
benchmarks/release/fixtures/roots_dead_clusters/: pyproject.toml
benchmarks/release/fixtures/roots_dead_clusters/src/pkg/: app.py
benchmarks/release/fixtures/semantic_identity/src/pkg/: alpha.py  app.py  beta.py
benchmarks/release/fixtures/uncertainty/: pyproject.toml
benchmarks/release/fixtures/uncertainty/src/pkg/: api.py  safe.py  use.py
benchmarks/release/labels/: advanced_bindings.json  annotations_tests.json  auto_mode.json  constructed_cli.json  constructed_library.json  constructed_scale.json  dynamic_exports.json  library_api.json  partial_project.json  roots_dead_clusters.json  semantic_identity.json  uncertainty.json
benchmarks/release/real_adjudications/: django-upgrade.json  h11.json  itsdangerous.json  pyupgrade.json
crates/cull-cli/: Cargo.toml
crates/cull-cli/src/: main.rs
crates/cull-cli/tests/: check.rs
crates/cull-core/: Cargo.toml
crates/cull-core/src/: diagnostic.rs  ids.rs  ir.rs  lib.rs  output.rs  semantic.rs  source.rs
crates/cull-python/: Cargo.toml
crates/cull-python/src/: analysis.rs  binding_inventory.rs  check.rs  config.rs  decode.rs  definition_effects.rs  discovery.rs  flow_analysis.rs  frontend.rs  lib.rs  module_namespace.rs  paths.rs  ruff_frontend.rs  semantic_inventory.rs
crates/cull-python/tests/: annotation_evidence.rs  bindings.rs  flow.rs  frontend.rs  part0.rs  part1a.rs  part1b.rs  part1c.rs  part2.rs  project_graph.rs  reachability.rs  references.rs  uncertainty.rs
crates/cull-python/tests/fixtures/annotation_evidence/final/: pyproject.toml
crates/cull-python/tests/fixtures/annotation_evidence/final/src/pkg/: annotations.py
crates/cull-python/tests/fixtures/annotation_evidence/final/tests/: test_annotations.py
crates/cull-python/tests/fixtures/bindings/bindings/src/pkg/: sample.py
crates/cull-python/tests/fixtures/flow/flow/src/pkg/: flow.py
crates/cull-python/tests/fixtures/frontend/basic/src/acme/: cache.py
crates/cull-python/tests/fixtures/frontend/flatpkg/pkg/: __init__.py
crates/cull-python/tests/fixtures/part0/basic/src/acme/: __init__.py
crates/cull-python/tests/fixtures/part1a/bindings/src/pkg/: __init__.py
crates/cull-python/tests/fixtures/part1b/declarations/: pyproject.toml
crates/cull-python/tests/fixtures/part1b/invalid_declarations/src/pkg/: bad.py
crates/cull-python/tests/fixtures/part1b/references/src/pkg/: refs.py
crates/cull-python/tests/fixtures/references/declarations/src/pkg/: __init__.py  scopes.py
crates/cull-python/tests/fixtures/references/invalid_declarations/src/pkg/: __init__.py
crates/cull-python/tests/fixtures/references/references/src/pkg/: __init__.py
crates/cull-python/tests/snapshots/: annotation_evidence_debug_references.json  bindings_debug_bindings.json  flow_debug_references.json  frontend_basic_debug_definitions.json  frontend_flatpkg_debug_definitions.json  part1a_bindings_debug_bindings.json  part1b_references_debug_references.json  part1c_flow_debug_references.json  references_debug_references.json
crates/cull-python/tests/support/: cpython_definition_oracle.py
crates/culler-cli/: Cargo.toml
crates/culler-cli/src/: main.rs
crates/culler-cli/tests/: check.rs
crates/culler-python/: Cargo.toml
docs/: v0-engineering-specification.md  v0-implementation-plan.md
docs/notes/: part-0-implementation-note.md  part-1a-implementation-note.md  part-1b-implementation-note.md  part-1c-implementation-note.md  part-2-implementation-note.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_definitions.rs
scripts/: cpython_definition_oracle.py
