[workspace]
members = [
    "crates/cull-cli",
    "crates/cull-core",
    "crates/cull-python",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
repository = "https://github.com/beaubhp/cull"

[workspace.dependencies]
clap = { version = "4.5.53", features = ["derive"] }
globset = "0.4.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.24.0"
thiserror = "2.0.18"
toml = "0.9.8"
walkdir = "2.5.0"

[workspace.dependencies.ruff_python_ast]
git = "https://github.com/astral-sh/ruff"
rev = "7033119ac2a7fb82e553afec621dd6f72f4f4720"
package = "ruff_python_ast"

[workspace.dependencies.ruff_python_parser]
git = "https://github.com/astral-sh/ruff"
rev = "7033119ac2a7fb82e553afec621dd6f72f4f4720"
package = "ruff_python_parser"

[workspace.dependencies.ruff_text_size]
git = "https://github.com/astral-sh/ruff"
rev = "7033119ac2a7fb82e553afec621dd6f72f4f4720"
package = "ruff_text_size"
