[workspace]
members = [
    "crates/culler-cli",
    "crates/culler-core",
    "crates/culler-python",
]
resolver = "2"

[workspace.package]
version = "0.1.1" # x-release-please-version
edition = "2021"
rust-version = "1.82"
license = "MIT"
repository = "https://github.com/beaubhp/culler"
description = "A fast, high-confidence Python dead-code analyzer."

[workspace.dependencies]
blake3 = "1.8.2"
clap = { version = "4.5.53", features = ["derive"] }
culler-core = { version = "0.1.1", path = "crates/culler-core" } # x-release-please-version
culler-python = { version = "0.1.1", path = "crates/culler-python" } # x-release-please-version
data-encoding = "2.9.0"
globset = "0.4.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.24.0"
thiserror = "2.0.18"
toml = "0.9.8"
walkdir = "2.5.0"

ruff_python_ast = "0.0.3"
ruff_python_parser = "0.0.3"
ruff_text_size = "0.0.3"
