[package]
name = "culler-fuzz"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
culler-python = { path = "../crates/culler-python" }
libfuzzer-sys = "0.4"

[[bin]]
name = "parse_definitions"
path = "fuzz_targets/parse_definitions.rs"
test = false
doc = false
bench = false
