[package]
name = "cull-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3.workspace = true
cull-core = { path = "../cull-core" }
data-encoding.workspace = true
globset.workspace = true
ruff_python_ast.workspace = true
ruff_python_parser.workspace = true
ruff_text_size.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
walkdir.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
