[package]
name = "culler-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[[bin]]
name = "culler"
path = "src/main.rs"

[dependencies]
clap.workspace = true
culler-core.workspace = true
culler-python.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
